fix: improved readability

--- a/src/styles/markdown.css
+++ b/src/styles/markdown.css
@@ -1,4 +1,4 @@
-.markdown-content {
+/*.markdown-content {
   color: #abb2bf;
 }
 
@@ -107,4 +107,4 @@
 .markdown-content .linenumber {
   min-width: 2.5em !important;
   color: rgb(79, 75, 79) !important;
-}
+}*/
